--- a/css/animate.css
+++ b/css/animate.css
@@ -55,7 +55,6 @@
   width: 60px;
   height: 60px;
   padding: 1rem;
-  background: var(--primary-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,12 +114,11 @@
 
 .menu-wrap .toggler:checked ~ .menu > div {
   transform: scale(1);
-  transition-duration: var(--menu-speed);
 }
 
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
-  transition:  opacity 0.7s ease-in-out 0.4s;
+  /* transition:  opacity 0.7s ease-in-out 0.4s; */
 }
 
 .menu-wrap .menu {
@@ -137,7 +135,6 @@
 }
 
 .menu-wrap .menu > div {
-  background: var(--overlay-color);
   border-radius: 50%;
   width: 200vw;
   height: 200vw;
@@ -146,7 +143,7 @@
   align-items: center;
   justify-content: center;
   transform: scale(0);
-  transition: all 0.7s ease-in-out;
+  /* transition: all 0.7s ease-in-out; */
 }
 
 .menu-wrap .menu > div > div {
@@ -179,6 +176,10 @@
   transition: color 0.7s ease-in-out;
 }
 .hovertochange:hover{
-  transform: scale(1.5);
-  transition: all 1s ease-in-out;
+  /* transform: scale(1.2); */
+  border-bottom: 2px solid white;
+}
+.commonwrong{
+  padding-right: 30px;
+  color: rgba(107, 201, 255, 0.116);
 }
