--- a/css/Events.css
+++ b/css/Events.css
@@ -188,8 +188,13 @@ h4{
 }
 }
 
-@media screen and (min-height:390px) and (max-height: 560px){
+@media screen and (min-height:390px) and (max-height: 558px){
   .main-container::before{
   height: 200vh;
+}
+}
+@media screen and (min-height:558px) and (max-height: 650px){
+  .main-container::before{
+  height: 180vh;
 }
 }
