--- a/css/default.css
+++ b/css/default.css
@@ -20,8 +20,8 @@ body,ul,table,form {
     width: fit-content;
     margin: 0 auto;
     position: relative;
-    height: 15vh;
-    font-size: 100px;
+    height: 13vh;
+    font-size: 5rem;
 
 }
 .Team div{
@@ -378,7 +378,7 @@ body,ul,table,form {
 	top:0;
 	left:0;
 	width:80%;
-	height:700px;
+	height:80%;
     margin: 0 10%;
 
 	display:none;
