--- a/samples/magazine3/css/magazine3.css
+++ b/samples/magazine3/css/magazine3.css
@@ -89,7 +89,6 @@
     position: absolute;
     top: 0;
 }
-
 .magazine3 .next-button {
     right: -22px;
     -webkit-border-radius: 0 15px 15px 0;
@@ -97,6 +96,14 @@
     -ms-border-radius: 0 15px 15px 0;
     -o-border-radius: 0 15px 15px 0;
     border-radius: 0 15px 15px 0;
+    background-color: white;
+    background-image: url(../../../pics/next.png);
+    background-size: 20px;
+    background-position-y: 50%;
+    margin-top: auto;
+   
+
+    background-repeat: no-repeat;
 }
 
 .magazine3 .previous-button {
@@ -106,28 +113,9 @@
     -ms-border-radius: 15px 0 0 15px;
     -o-border-radius: 15px 0 0 15px;
     border-radius: 15px 0 0 15px;
-}
-
-.magazine3 .previous-button-hover,
-.magazine3 .next-button-hover {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.magazine3 .previous-button-hover,
-.magazine3 .previous-button-down {
-    background-image: url(../pics/arrows.png);
-    background-position: -4px 284px;
-    background-repeat: no-repeat;
-}
-
-.magazine3 .previous-button-down,
-.magazine3 .next-button-down {
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.magazine3 .next-button-hover,
-.magazine3 .next-button-down {
-    background-image: url(../pics/arrows.png);
-    background-position: -38px 284px;
+    background-color: white;
+    background-image: url(../../../pics/previous.png);
+    background-size: 20px;
+    background-position-y: 50%;
     background-repeat: no-repeat;
 }
