--- a/samples/magazine5/css/magazine5.css
+++ b/samples/magazine5/css/magazine5.css
@@ -94,6 +94,14 @@
     -ms-border-radius: 0 15px 15px 0;
     -o-border-radius: 0 15px 15px 0;
     border-radius: 0 15px 15px 0;
+    background-color: white;
+    background-image: url(../../../pics/next.png);
+    background-size: 20px;
+    background-position-y: 50%;
+    margin-top: auto;
+   
+
+    background-repeat: no-repeat;
 }
 
 .magazine5 .previous-button {
@@ -103,28 +111,9 @@
     -ms-border-radius: 15px 0 0 15px;
     -o-border-radius: 15px 0 0 15px;
     border-radius: 15px 0 0 15px;
-}
-
-.magazine5 .previous-button-hover,
-.magazine5 .next-button-hover {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.magazine5 .previous-button-hover,
-.magazine5 .previous-button-down {
-    background-image: url(../pics/arrows.png);
-    background-position: -4px 284px;
-    background-repeat: no-repeat;
-}
-
-.magazine5 .previous-button-down,
-.magazine5 .next-button-down {
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.magazine5 .next-button-hover,
-.magazine5 .next-button-down {
-    background-image: url(../pics/arrows.png);
-    background-position: -38px 284px;
+    background-color: white;
+    background-image: url(../../../pics/previous.png);
+    background-size: 20px;
+    background-position-y: 50%;
     background-repeat: no-repeat;
 }
