--- a/css/Events.css
+++ b/css/Events.css
@@ -182,3 +182,19 @@ h4{
   z-index: -1;
   
 }
+@media screen and (max-height: 390px){
+  .main-container::before{
+  height: 280vh;
+}
+}
+
+@media screen and (min-height:390px) and (max-height: 558px){
+  .main-container::before{
+  height: 200vh;
+}
+}
+@media screen and (min-height:558px) and (max-height: 650px){
+  .main-container::before{
+  height: 180vh;
+}
+}
