--- a/css/main.css
+++ b/css/main.css
@@ -37,15 +37,15 @@ font-family: 'Are You Serious', cursive;
     animation: left 1.2s ease-in-out infinite alternate;
     font-family: 'Permanent Marker', cursive;
 }
-/* @keyframes left{
+@keyframes left{
     from {
-      text-shadow: 0 0 6px #fff, 0 0 12px #fff, 0 0 18px f7dfb1, 0 0 24px #f7dfb1, 0 0 30px #f7dfb1, 0 0 36px #f7dfb1, 0 0 42px #f7dfb1;
+      text-shadow: 0 0 3px #fff, 0 0 4px #fff, 0 0 5px #e60073, 0 0 6px #e60073, 0 0 7px #e60073, 0 0 8px #e60073, 0 0 9px #e60073;
     }
     
     to {
-      text-shadow: 0 0 6px #fff, 0 0 12px #fff, 0 0 18px #fff, 0 0 24px #fff, 0 0 30px #fff, 0 0 36px #fff, 0 0 42px #ff4da6;
+      text-shadow: 0 0 4px #fff, 0 0 5px #d387ad, 0 0 6px #e66ba8, 0 0 7px #e76aa9, 0 0 8px #f860ac, 0 0 9px #f763ad, 0 0 10px #ff51a8;
     }
-} */
+}
 /* For Tagline The Greatest.. */
 .tagline{
     font-family: 'IM Fell DW Pica', serif;
