--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,18 @@ font-family: 'Are You Serious', cursive;
     opacity: 0.9;
     transform: scale(1.2);
 }
+ .logoimg{
+    height: 100px;
+    width: 100px;
+} 
+@media screen and (max-height:1000px ) and (max-width:800px)
+
+{
+    .logoimg{ height:60px ;
+        width: 50px;
+    }
+
+} 
 
 .generalstats{
     background: linear-gradient(to right,#C33764 ,#1D2671);
